# hector_serialization

./: stack.xml
hector_serialization_core/: CMakeLists.txt  mainpage.dox  manifest.xml
hector_serialization_core/include/hector_serialization/: buffer.h  buffered_channel.h  channel.h  context.h  device.h  hector_serialization.h  protocol.h  serialization.h  subscription.h  types.h
hector_serialization_core/include/hector_serialization/device/: async_device.h  file.h  serial_port.h
hector_serialization_core/include/hector_serialization/socket/: context.h  socket.h  tcp.h  udp.h
hector_serialization_core/src/: CMakeLists.txt  channel.cpp
hector_serialization_core/src/device/: file.cpp  serial_port.cpp
hector_serialization_core/src/socket/: context.cpp  tcp.cpp  udp.cpp
hector_serialization_rosserial/: mainpage.dox  manifest.xml
hector_serialization_rosserial/include/hector_serialization/: rosserial.h
hector_serialization_rosserial/src/: CMakeLists.txt  rosserial.cpp  serial_client.cpp  serial_server.cpp  udp_client.cpp  udp_server.cpp
hector_serialization_rosserial/src/rosserial/: client.cpp  message_instance.cpp  peer.cpp  publisher.cpp  server.cpp  service_client.cpp  service_server.cpp  subscriber.cpp
hector_serialization_test/: CMakeLists.txt  mainpage.dox  manifest.xml
hector_serialization_test/src/: CMakeLists.txt  udp.cpp  xbee.cpp
hector_serialization_xbee/: mainpage.dox  manifest.xml
hector_serialization_xbee/include/hector_serialization/: xbee.h
hector_serialization_xbee/src/: CMakeLists.txt  xbee.cpp
(+9 files in other folders)
